--- a/models-master/research/object_detection/@k_project/LPR/lpr.config
+++ b/models-master/research/object_detection/@k_project/LPR/lpr.config
@@ -135,7 +135,7 @@ model {
   }
 }
 train_config {
-  batch_size: 32
+  batch_size: 24
   data_augmentation_options {
     random_image_scale {
       min_scale_ratio:0.5
@@ -173,7 +173,7 @@ train_config {
     }
     use_moving_average: false
   }
-  fine_tune_checkpoint: "@k_project/LPR/mobilenetv2_ssd_ckpt/ckpt-0"
+  fine_tune_checkpoint: "object_detection/@k_project/LPR/mobilenetv2_ssd_ckpt/ckpt-0"
   num_steps: 50000
   startup_delay_steps: 0.0
   replicas_to_aggregate: 8
@@ -183,9 +183,9 @@ train_config {
   fine_tune_checkpoint_version: V2
 }
 train_input_reader {
-  label_map_path: "LPR/label_map.pbtxt"
+  label_map_path: "object_detection/@k_project/LPR/label_map.pbtxt"
   tf_record_input_reader {
-    input_path: "@k_project/LPR/tf_record_new/train.record"
+    input_path: "object_detection/@k_project/LPR/tf_record_new/train.record"
   }
 }
 eval_config {
@@ -193,11 +193,11 @@ eval_config {
   use_moving_averages: false
 }
 eval_input_reader {
-  label_map_path: "@k_project/LPR/label_map.pbtxt"
+  label_map_path: "object_detection/@k_project/LPR/label_map.pbtxt"
   shuffle: false
   num_epochs: 1
   tf_record_input_reader {
-    input_path: "@k_project/LPR/tf_record_new/val.tfrecord"
+    input_path: "object_detection/@k_project/LPR/tf_record_new/val.tfrecord"
   }
 }
  
