--- a/models-master/research/object_detection/@k_project/LPR/lpr.config
+++ b/models-master/research/object_detection/@k_project/LPR/lpr.config
@@ -1,39 +1,6 @@
 model {
   ssd {
     num_classes: 1
-    image_resizer {
-      fixed_shape_resizer {
-        height: 300
-        width: 300
-      }
-    }
-    feature_extractor {
-      type: "ssd_mobilenet_v2_keras"
-      depth_multiplier: 1.0
-      min_depth: 16
-      conv_hyperparams {
-        regularizer {
-          l2_regularizer {
-            weight: 3.9999998989515007e-05
-          }
-        }
-        initializer {
-          truncated_normal_initializer {
-            mean: 0.0
-            stddev: 0.029999999329447746
-          }
-        }
-        activation: RELU_6
-        batch_norm {
-          decay: 0.9700000286102295
-          center: true
-          scale: true
-          epsilon: 0.0010000000474974513
-          train: true
-        }
-      }
-      override_base_feature_extractor_hyperparams: true
-    }
     box_coder {
       faster_rcnn_box_coder {
         y_scale: 10.0
@@ -49,153 +16,184 @@ model {
         ignore_thresholds: false
         negatives_lower_than_unmatched: true
         force_match_for_each_row: true
-        use_matmul_gather: true
       }
     }
     similarity_calculator {
       iou_similarity {
       }
     }
-    box_predictor {
-      convolutional_box_predictor {
-        conv_hyperparams {
-          regularizer {
-            l2_regularizer {
-              weight: 3.9999998989515007e-05
-            }
-          }
-          initializer {
-            random_normal_initializer {
-              mean: 0.0
-              stddev: 0.009999999776482582
-            }
-          }
-          activation: RELU_6
-          batch_norm {
-            decay: 0.9700000286102295
-            center: true
-            scale: true
-            epsilon: 0.0010000000474974513
-            train: true
-          }
-        }
-        min_depth: 0
-        max_depth: 0
-        num_layers_before_predictor: 0
-        use_dropout: false
-        dropout_keep_probability: 0.800000011920929
-        kernel_size: 1
-        box_code_size: 4
-        apply_sigmoid_to_scores: false
-        class_prediction_bias_init: -4.599999904632568
-      }
-    }
     anchor_generator {
       ssd_anchor_generator {
         num_layers: 6
-        min_scale: 0.20000000298023224
-        max_scale: 0.949999988079071
+        min_scale: 0.2
+        max_scale: 0.95
         aspect_ratios: 1.0
         aspect_ratios: 2.0
         aspect_ratios: 0.5
         aspect_ratios: 3.0
-        aspect_ratios: 0.33329999446868896
+        aspect_ratios: 0.3333
+        height_stride: 16
+        height_stride: 32
+        height_stride: 64
+        height_stride: 128
+        height_stride: 256
+        height_stride: 512
+        width_stride: 16
+        width_stride: 32
+        width_stride: 64
+        width_stride: 128
+        width_stride: 256
+        width_stride: 512
       }
     }
-    post_processing {
-      batch_non_max_suppression {
-        score_threshold: 9.99999993922529e-09
-        iou_threshold: 0.6000000238418579
-        max_detections_per_class: 100
-        max_total_detections: 100
-        use_static_shapes: false
+    image_resizer {
+      keep_aspect_ratio_resizer {
+        min_dimension: 320
+        max_dimension: 640
       }
-      score_converter: SIGMOID
     }
-    normalize_loss_by_num_matches: true
+    box_predictor {
+      convolutional_box_predictor {
+        min_depth: 0
+        max_depth: 0
+        num_layers_before_predictor: 0
+        use_dropout: false
+        dropout_keep_probability: 0.8
+        kernel_size: 1
+        box_code_size: 4
+        apply_sigmoid_to_scores: false
+        conv_hyperparams {
+          activation: RELU_6,
+          regularizer {
+            l2_regularizer {
+              weight: 0.00004
+            }
+          }
+          initializer {
+            truncated_normal_initializer {
+              stddev: 0.03
+              mean: 0.0
+            }
+          }
+          batch_norm {
+            train: true,
+            scale: true,
+            center: true,
+            decay: 0.9997,
+            epsilon: 0.001,
+          }
+        }
+      }
+    }
+    feature_extractor {
+      type: 'ssd_mobilenet_v2'
+      min_depth: 16
+      depth_multiplier: 1.0
+      use_explicit_padding: true
+      conv_hyperparams {
+        activation: RELU_6,
+        regularizer {
+          l2_regularizer {
+            weight: 0.00004
+          }
+        }
+        initializer {
+          truncated_normal_initializer {
+            stddev: 0.03
+            mean: 0.0
+          }
+        }
+        batch_norm {
+          train: true,
+          scale: true,
+          center: true,
+          decay: 0.9997,
+          epsilon: 0.001,
+        }
+      }
+    }
     loss {
+      classification_loss {
+        weighted_sigmoid {
+        }
+      }
       localization_loss {
         weighted_smooth_l1 {
-          delta: 1.0
         }
       }
-      classification_loss {
-        weighted_sigmoid_focal {
-          gamma: 2.0
-          alpha: 0.75
-        }
+      hard_example_miner {
+        num_hard_examples: 3000
+        iou_threshold: 0.99
+        loss_type: CLASSIFICATION
+        max_negatives_per_positive: 3
+        min_negatives_per_image: 3
       }
       classification_weight: 1.0
       localization_weight: 1.0
     }
-    encode_background_as_zeros: true
-    normalize_loc_loss_by_codesize: true
-    inplace_batchnorm_update: true
-    freeze_batchnorm: false
+    normalize_loss_by_num_matches: true
+    post_processing {
+      batch_non_max_suppression {
+        score_threshold: 1e-8
+        iou_threshold: 0.6
+        max_detections_per_class: 100
+        max_total_detections: 100
+      }
+      score_converter: SIGMOID
+    }
   }
 }
-train_config {
-  batch_size: 8
+
+train_config: {
+  batch_size: 24
+  optimizer {
+    rms_prop_optimizer: {
+      learning_rate: {
+        exponential_decay_learning_rate {
+          initial_learning_rate: 0.004
+          decay_steps: 40000
+          decay_factor: 0.95
+        }
+      }
+      momentum_optimizer_value: 0.9
+      decay: 0.9
+      epsilon: 1.0
+    }
+  }
+  fine_tune_checkpoint: "object_detection/@k_project/LPR/mobilenetv2_ssd_ckpt/ckpt-0"
+  fine_tune_checkpoint_type:  "detection"
+  # Note: The below line limits the training process to 200K steps, which we
+  # empirically found to be sufficient enough to train the pets dataset. This
+  # effectively bypasses the learning rate schedule (the learning rate will
+  # never decay). Remove the below line to train indefinitely.
+  num_steps: 50000
   data_augmentation_options {
     random_horizontal_flip {
     }
   }
   data_augmentation_options {
-    ssd_random_crop {
+    ssd_random_crop_fixed_aspect_ratio {
     }
   }
-  sync_replicas: true
-  optimizer {
-    momentum_optimizer {
-      learning_rate {
-        cosine_decay_learning_rate {
-          learning_rate_base: 0.20000000298
-          total_steps: 50000
-          warmup_learning_rate: 0.0599999986589
-          warmup_steps: 200
-        }
-      }
-      momentum_optimizer_value: 0.8999999761581421
-    }
-    use_moving_average: false
-  }
-  fine_tune_checkpoint: "object_detection/@k_project/LPR/mobilenetv2_ssd_ckpt/ckpt-0"
-  from_detection_checkpoint: true.
-  load_all_detection_checkpoint_vars: true
-  num_steps: 50000
-  startup_delay_steps: 0.0
-  replicas_to_aggregate: 8
-  max_number_of_boxes: 100
-  unpad_groundtruth_tensors: false
-  fine_tune_checkpoint_type: "detection"
-  fine_tune_checkpoint_version: V2
-  freeze_variables:
-  [ 'FeatureExtractor/MobilenetV2/Conv/',
-  'FeatureExtractor/MobilenetV2/expanded_conv/',
-  'FeatureExtractor/MobilenetV2/expanded_conv_1/',
-  'FeatureExtractor/MobilenetV2/expanded_conv_2/',
-  'FeatureExtractor/MobilenetV2/expanded_conv_3/',
-  'FeatureExtractor/MobilenetV2/expanded_conv_4/',
-  'FeatureExtractor/MobilenetV2/expanded_conv_5/',
-  'FeatureExtractor/MobilenetV2/expanded_conv_6/',
-  'FeatureExtractor/MobilenetV2/expanded_conv_7/']
 }
-train_input_reader {
-  label_map_path: "object_detection/@k_project/LPR/label_map.pbtxt"
+
+train_input_reader: {
   tf_record_input_reader {
-    input_path: "object_detection/@k_project/LPR/tf_record_new/train.record"
+    input_path: "PATH_TO_BE_CONFIGURED/mscoco_train.record-?????-of-00100"
   }
+  label_map_path: "object_detection/@k_project/LPR/tf_record_new/train.record"
 }
-eval_config {
+
+eval_config: {
   metrics_set: "coco_detection_metrics"
   use_moving_averages: false
 }
-eval_input_reader {
-  label_map_path: "object_detection/@k_project/LPR/label_map.pbtxt"
-  shuffle: false
-  num_epochs: 1
+
+eval_input_reader: {
   tf_record_input_reader {
     input_path: "object_detection/@k_project/LPR/tf_record_new/val.tfrecord"
   }
+  label_map_path: "object_detection/@k_project/LPR/label_map.pbtxt"
+  shuffle: false
+  num_readers: 1
 }
- 
