--- a/models-master/research/object_detection/@k_project/LPR/lpr.config
+++ b/models-master/research/object_detection/@k_project/LPR/lpr.config
@@ -86,7 +86,7 @@ model {
       }
     }
     feature_extractor {
-      type: 'ssd_mobilenet_v2'
+      type: 'ssd_mobilenet_v2_keras'
       min_depth: 16
       depth_multiplier: 1.0
       use_explicit_padding: true
