--- a/models-master/research/object_detection/@k_project/LPR/lpr.config
+++ b/models-master/research/object_detection/@k_project/LPR/lpr.config
@@ -1,3 +1,9 @@
+# An untested config for Keras SSD with MobileNetV2 configured for Oxford-IIIT Pets Dataset.
+# Users should configure the fine_tune_checkpoint field in the train config as
+# well as the label_map_path and input_path fields in the train_input_reader and
+# eval_input_reader. Search for "PATH_TO_BE_CONFIGURED" to find the fields that
+# should be configured.
+
 model {
   ssd {
     num_classes: 1
@@ -32,24 +38,13 @@ model {
         aspect_ratios: 0.5
         aspect_ratios: 3.0
         aspect_ratios: 0.3333
-        height_stride: 16
-        height_stride: 32
-        height_stride: 64
-        height_stride: 128
-        height_stride: 256
-        height_stride: 512
-        width_stride: 16
-        width_stride: 32
-        width_stride: 64
-        width_stride: 128
-        width_stride: 256
-        width_stride: 512
+        reduce_boxes_in_lowest_layer: true
       }
     }
     image_resizer {
-      keep_aspect_ratio_resizer {
-        min_dimension: 320
-        max_dimension: 640
+      fixed_shape_resizer {
+        height: 300
+        width: 300
       }
     }
     box_predictor {
@@ -59,7 +54,7 @@ model {
         num_layers_before_predictor: 0
         use_dropout: false
         dropout_keep_probability: 0.8
-        kernel_size: 1
+        kernel_size: 3
         box_code_size: 4
         apply_sigmoid_to_scores: false
         conv_hyperparams {
@@ -75,13 +70,6 @@ model {
               mean: 0.0
             }
           }
-          batch_norm {
-            train: true,
-            scale: true,
-            center: true,
-            decay: 0.9997,
-            epsilon: 0.001,
-          }
         }
       }
     }
@@ -89,7 +77,6 @@ model {
       type: 'ssd_mobilenet_v2_keras'
       min_depth: 16
       depth_multiplier: 1.0
-      use_explicit_padding: true
       conv_hyperparams {
         activation: RELU_6,
         regularizer {
@@ -111,6 +98,7 @@ model {
           epsilon: 0.001,
         }
       }
+      override_base_feature_extractor_hyperparams: true
     }
     loss {
       classification_loss {
@@ -126,7 +114,7 @@ model {
         iou_threshold: 0.99
         loss_type: CLASSIFICATION
         max_negatives_per_positive: 3
-        min_negatives_per_image: 3
+        min_negatives_per_image: 0
       }
       classification_weight: 1.0
       localization_weight: 1.0
@@ -151,7 +139,7 @@ train_config: {
       learning_rate: {
         exponential_decay_learning_rate {
           initial_learning_rate: 0.004
-          decay_steps: 40000
+          decay_steps: 800720
           decay_factor: 0.95
         }
       }
@@ -159,41 +147,41 @@ train_config: {
       decay: 0.9
       epsilon: 1.0
     }
+    use_moving_average: False
   }
   fine_tune_checkpoint: "object_detection/@k_project/LPR/mobilenetv2_ssd_ckpt/ckpt-0"
-  fine_tune_checkpoint_type:  "detection"
-  # Note: The below line limits the training process to 200K steps, which we
-  # empirically found to be sufficient enough to train the pets dataset. This
-  # effectively bypasses the learning rate schedule (the learning rate will
-  # never decay). Remove the below line to train indefinitely.
-  num_steps: 50000
+  from_detection_checkpoint: true
+  fine_tune_checkpoint_type: "detection"
+  fine_tune_checkpoint_version: V2
+  num_steps: 200000
   data_augmentation_options {
     random_horizontal_flip {
     }
   }
   data_augmentation_options {
-    ssd_random_crop_fixed_aspect_ratio {
+    ssd_random_crop {
     }
   }
+  max_number_of_boxes: 50
 }
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/mscoco_train.record-?????-of-00100"
+    input_path: "object_detection/@k_project/LPR/tf_record_new/train.record"
   }
-  label_map_path: "object_detection/@k_project/LPR/tf_record_new/train.record"
+  label_map_path:  "object_detection/@k_project/LPR/label_map.pbtxt"
 }
 
 eval_config: {
   metrics_set: "coco_detection_metrics"
-  use_moving_averages: false
+  num_examples: 1101
 }
 
 eval_input_reader: {
   tf_record_input_reader {
     input_path: "object_detection/@k_project/LPR/tf_record_new/val.tfrecord"
   }
-  label_map_path: "object_detection/@k_project/LPR/label_map.pbtxt"
+  label_map_path:  "object_detection/@k_project/LPR/label_map.pbtxt"
   shuffle: false
   num_readers: 1
 }
