--- a/models-master/research/object_detection/@k_project/LPR/centernet_lpr.config
+++ b/models-master/research/object_detection/@k_project/LPR/centernet_lpr.config
@@ -7,7 +7,7 @@
 
 model {
   center_net {
-    num_classes: 90
+    num_classes: 1
     feature_extractor {
       type: "resnet_v1_50_fpn"
     }
@@ -43,8 +43,8 @@ model {
 
 train_config: {
 
-  batch_size: 128
-  num_steps: 250000
+  batch_size: 24
+  num_steps: 50000
 
   data_augmentation_options {
     random_horizontal_flip {
@@ -96,7 +96,7 @@ train_config: {
           learning_rate_base: 1e-3
           total_steps: 50000
           warmup_learning_rate: 2.5e-4
-          warmup_steps: 5000
+          warmup_steps: 2000
         }
       }
     }
@@ -106,8 +106,8 @@ train_config: {
   unpad_groundtruth_tensors: false
 
   fine_tune_checkpoint_version: V2
-  fine_tune_checkpoint: "object_detection/@k_project/LPR/centernet_resnet_v1/ckpt-0"
-  fine_tune_checkpoint_type: "detection"
+  fine_tune_checkpoint: "object_detection/@k_project/LPR/centernet_resnet_v1/checkpoint/ckpt-0"
+  fine_tune_checkpoint_type: "classification"
 }
 
 train_input_reader: {
