--- a/models-master/research/object_detection/@k_project/LPR/centernet_lpr - Copy.config
+++ b/models-master/research/object_detection/@k_project/LPR/centernet_lpr - Copy.config
@@ -7,7 +7,7 @@
 
 model {
   center_net {
-    num_classes: 90
+    num_classes: 1
     feature_extractor {
       type: "resnet_v1_50_fpn"
     }
@@ -43,8 +43,8 @@ model {
 
 train_config: {
 
-  batch_size: 128
-  num_steps: 250000
+  batch_size: 24
+  num_steps: 50000
 
   data_augmentation_options {
     random_horizontal_flip {
@@ -94,9 +94,9 @@ train_config: {
       learning_rate: {
         cosine_decay_learning_rate {
           learning_rate_base: 1e-3
-          total_steps: 250000
+          total_steps: 50000
           warmup_learning_rate: 2.5e-4
-          warmup_steps: 5000
+          warmup_steps: 2000
         }
       }
     }
@@ -106,14 +106,14 @@ train_config: {
   unpad_groundtruth_tensors: false
 
   fine_tune_checkpoint_version: V2
-  fine_tune_checkpoint: "PATH_TO_BE_CONFIGURED"
+  fine_tune_checkpoint: "object_detection/@k_project/LPR/centernet_resnet_v1/checkpoint/ckpt-0"
   fine_tune_checkpoint_type: "classification"
 }
 
 train_input_reader: {
-  label_map_path: "PATH_TO_BE_CONFIGURED/label_map.txt"
+  label_map_path: "object_detection/@k_project/LPR/label_map.txt"
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/train2017-?????-of-00256.tfrecord"
+    input_path: "object_detection/@k_project/LPR/tf_record_new/train.record"
   }
 }
 
@@ -124,10 +124,10 @@ eval_config: {
 }
 
 eval_input_reader: {
-  label_map_path: "PATH_TO_BE_CONFIGURED/label_map.txt"
+  label_map_path: "object_detection/@k_project/LPR/label_map.txt"
   shuffle: false
   num_epochs: 1
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED/val2017-?????-of-00032.tfrecord"
+    input_path: "object_detection/@k_project/LPR/tf_record_new/val.tfrecord"
   }
 }
