--- a/models-master/research/object_detection/@k_project/LPR/centernet_lpr.config
+++ b/models-master/research/object_detection/@k_project/LPR/centernet_lpr.config
@@ -1,15 +1,8 @@
-# CenterNet meta-architecture from the "Objects as Points" [1] paper
-# with the ResNet-v2-101 backbone. The ResNet backbone has a few differences
-# as compared to the one mentioned in the paper, hence the performance is
-# slightly worse. This config is TPU comptatible.
-# [1]: https://arxiv.org/abs/1904.07850
-#
-
 model {
   center_net {
     num_classes: 1
     feature_extractor {
-      type: "resnet_v1_50_fpn"
+      type: "resnet_v2_101"
     }
     image_resizer {
       keep_aspect_ratio_resizer {
@@ -43,7 +36,7 @@ model {
 
 train_config: {
 
-  batch_size: 24
+  batch_size: 2
   num_steps: 50000
 
   data_augmentation_options {
@@ -92,11 +85,16 @@ train_config: {
     adam_optimizer: {
       epsilon: 1e-7  # Match tf.keras.optimizers.Adam's default.
       learning_rate: {
-        cosine_decay_learning_rate {
-          learning_rate_base: 1e-3
-          total_steps: 50000
-          warmup_learning_rate: 2.5e-4
-          warmup_steps: 2000
+        manual_step_learning_rate {
+          initial_learning_rate: 1e-3
+          schedule {
+           step: 10000
+           learning_rate: 1e-4
+          }
+          schedule {
+            step: 30000
+            learning_rate: 1e-5
+          }
         }
       }
     }
