--- a/models-master/research/object_detection/@k_project/LPR/mobilenetv2_fpn.config
+++ b/models-master/research/object_detection/@k_project/LPR/mobilenetv2_fpn.config
@@ -182,7 +182,7 @@ eval_config {
   use_moving_averages: false
 }
 eval_input_reader {
-  label_map_path: ""object_detection/@k_project/LPR/label_map.pbtxt"
+  label_map_path: "object_detection/@k_project/LPR/label_map.pbtxt"
   shuffle: false
   num_epochs: 1
   tf_record_input_reader {
