--- a/models-master/research/object_detection/@k_project/LPR/mobilenetv2_fpn.config
+++ b/models-master/research/object_detection/@k_project/LPR/mobilenetv2_fpn.config
@@ -1,6 +1,6 @@
 model {
   ssd {
-    num_classes: 90
+    num_classes: 1
     image_resizer {
       fixed_shape_resizer {
         height: 320
@@ -128,7 +128,7 @@ model {
     encode_background_as_zeros: true
     normalize_loc_loss_by_codesize: true
     inplace_batchnorm_update: true
-    freeze_batchnorm: true
+    freeze_batchnorm: false
   }
 }
 train_config {
