--- a/models-master/research/object_detection/@k_project/LPR/lpr.config
+++ b/models-master/research/object_detection/@k_project/LPR/lpr.config
@@ -151,7 +151,7 @@ train_config: {
   }
   fine_tune_checkpoint: "object_detection/@k_project/LPR/mobilenetv2_ssd_ckpt/ckpt-0"
   from_detection_checkpoint: true
-  fine_tune_checkpoint_type: "detection"
+  fine_tune_checkpoint_type: "classification"
   fine_tune_checkpoint_version: V2
   num_steps: 200000
   data_augmentation_options {
